@@ -14,7 +14,6 @@ import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.LocalTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true)
@@ -22,12 +21,13 @@ import java.util.stream.Collectors;
 public class MatchService {
 	private final MatchRepository matchRepository;
 
-	public List<MatchInfoDto.TodayMatchResponse> todayMatchInfo() { // today match의 정보를 List 형식으로 리턴
+	public MatchInfoDto.Response todayMatchInfo() { // today match의 정보를 List 형식으로 리턴
 		LocalDate todayDate = LocalDate.now();
-		LocalDateTime start = LocalDateTime.of(todayDate.minusDays(1), LocalTime.of(0, 0, 0));
+		LocalDateTime start = LocalDateTime.of(todayDate, LocalTime.of(0, 0, 0));
 		LocalDateTime end = todayDate.atTime(23, 59, 59);
 		List<Match> todayMatches = matchRepository.findMatchesByMatchDateBetween(start, end);
-		return todayMatches.stream()
+
+		List<MatchInfoDto.TodayMatchResponse> matchResponseList = todayMatches.stream()
 			.map(match -> new MatchInfoDto.TodayMatchResponse(match.getId(), match.getMatchDate(),
 				match.getTeam1().getTeamName(), match.getTeam1().getTeamLogoUrl(),
 				match.getTeam2().getTeamName(), match.getTeam2().getTeamLogoUrl(),
@@ -35,7 +35,12 @@ public class MatchService {
 				calculateMatchVoteResult(match.getMatchVotes(), match.getTeam2().getId()),
 				match.getSeason().getName(),
 				match.getMatchNumber())) // team2
-			.collect(Collectors.toList());
+			.toList();
+
+		return MatchInfoDto.Response.builder()
+			.matchResponses(matchResponseList)
+			.matchResponseSize(matchResponseList.size())
+			.build();
 	}
 
 	public Double calculateMatchVoteResult(List<MatchVote> votes, Long teamId) { // 해당 팀의 승부 예측결과 %단위로 리턴
